WIP: ant-contrib as pom dep

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,19 @@
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.8</version>
+        <dependencies>
+           <dependency>
+              <groupId>ant-contrib</groupId>
+              <artifactId>ant-contrib</artifactId>
+              <version>1.0b3</version>
+              <exclusions>
+                <exclusion>
+                   <groupId>ant</groupId>
+                   <artifactId>ant</artifactId>
+                </exclusion>
+              </exclusions>
+           </dependency>
+        </dependencies>
         <executions>
           <execution>
             <id>scala-antrun</id>
@@ -22,6 +35,7 @@
             </goals>
             <configuration>
               <target>
+                <taskdef resource="net/sf/antcontrib/antlib.xml" classpathref="maven.plugin.classpath"/>
                 <ant antfile="${basedir}/build.xml" target="build"/>`
               </target>
             </configuration>
