--- a/pom.xml
+++ b/pom.xml
@@ -1,50 +1,69 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.redhat.rhoads</groupId>
-  <artifactId>scala</artifactId>
-  <version>2.11.8.redhat-1</version>
-  <packaging>pom</packaging>
+    <groupId>org.scala-lang</groupId>
+    <artifactId>scala</artifactId>
+    <version>2.11.8.redhat-1</version>
+    <packaging>pom</packaging>
 
-  <name>scala</name>
-  <url>http://scala-lang.org</url>
+    <name>scala</name>
+    <url>http://scala-lang.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
-    <junit.version>4.11</junit.version>
-    <scala.plugin.version>3.3.1</scala.plugin.version>
-    <starr.version>2.11.7</starr.version>
-    <scala.compat.version>2.11</scala.compat.version>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+        <junit.version>4.11</junit.version>
+        <scala.plugin.version>3.3.1</scala.plugin.version>
+        <starr.version>2.11.7</starr.version>
+        <scala.compat.version>2.11</scala.compat.version>
+        <specs2.version>3.8</specs2.version>
+        <scalatest.version>2.2.6</scalatest.version>
+    </properties>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>net.alchim31.maven</groupId>
-          <artifactId>scala-maven-plugin</artifactId>
-          <version>${scala.plugin.version}</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>scala-maven-plugin</artifactId>
+                    <version>${scala.plugin.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
-  <modules>
-    <module>src/library</module>
-    <module>src/reflect</module>
-    <module>src/compiler</module>
-  </modules>
+    <modules>
+        <module>src/forkjoin</module>
+        <module>src/library</module>
+        <module>src/compiler</module>
+        <module>src/reflect</module>
+        <module>src/scalap</module>
+        <module>src/actors</module>
+    </modules>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.specs2</groupId>
+                <artifactId>specs2-core_${scala.compat.version}</artifactId>
+                <version>${specs2.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest_${scala.compat.version}</artifactId>
+                <version>${scalatest.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
