--- a/src/scalap/pom.xml
+++ b/src/scalap/pom.xml
@@ -6,7 +6,7 @@
     <version>2.11.8.redhat-1</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
-  <artifactId>scala-library</artifactId>
+  <artifactId>scalap</artifactId>
 
   <properties>
   </properties>
@@ -14,23 +14,26 @@
   <dependencies>
     <dependency>
       <groupId>org.scala-lang</groupId>
-      <artifactId>forkjoin</artifactId>
+      <artifactId>scala-library</artifactId>
       <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.specs2</groupId>
       <artifactId>specs2-core_${scala.compat.version}</artifactId>
+      <version>2.4.16</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.compat.version}</artifactId>
+      <version>2.2.4</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
