--- a/src/partest-javaagent/pom.xml
+++ b/src/partest-javaagent/pom.xml
@@ -6,41 +6,20 @@
         <version>2.11.8.redhat-1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>scala-compiler</artifactId>
-
-    <properties>
-        <scala.xml.version>1.0.4</scala.xml.version>
-        <scala.pc.version>1.0.4</scala.pc.version>
-    </properties>
+    <artifactId>scala-partest-javaagent</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
-            <artifactId>scala-compiler</artifactId>
-            <version>${scala.version}</version>
+            <artifactId>scala-library</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-partest_${scala.compat.version}</artifactId>
+            <version>${partest.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.ant</groupId>
-            <artifactId>ant</artifactId>
-            <version>${ant.version}</version>
-        </dependency>
-        <dependency> <!-- for scala-compiler-doc -->
-            <groupId>org.scala-lang.modules</groupId>
-            <artifactId>scala-xml_${scala.compat.version}</artifactId>
-            <version>${scala.xml.version}</version>
-        </dependency>
-        <dependency> <!-- for scala-compiler-doc -->
-            <groupId>org.scala-lang.modules</groupId>
-            <artifactId>scala-parser-combinators_${scala.compat.version}</artifactId>
-            <version>${scala.pc.version}</version>
-        </dependency>
-        <dependency> <!-- for scala-compiler-repl -->
-            <groupId>jline</groupId>
-            <artifactId>jline</artifactId>
-            <version>${jline.version}</version>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -71,12 +50,10 @@
                             <goal>testCompile</goal>
                         </goals>
                         <configuration>
-                            <configuration>
-                                <args>
-                                    <arg>-dependencyfile</arg>
-                                    <arg>${project.build.directory}/.scala_dependencies</arg>
-                                </args>
-                            </configuration>
+                            <args>
+                                <arg>-dependencyfile</arg>
+                                <arg>${project.build.directory}/.scala_dependencies</arg>
+                            </args>
                         </configuration>
                     </execution>
                 </executions>
@@ -96,5 +73,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
