--- a/src/reflect/pom.xml
+++ b/src/reflect/pom.xml
@@ -8,19 +8,16 @@
   </parent>
   <artifactId>scala-reflect</artifactId>
 
-  <properties>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
-      <version>${starr.version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-compiler</artifactId>
-      <version>${starr.version}</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
@@ -64,7 +61,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
+        <version>${surefire.version}</version>
         <configuration>
           <useFile>false</useFile>
           <disableXmlReport>true</disableXmlReport>
