--- a/src/partest-javaagent/pom.xml
+++ b/src/partest-javaagent/pom.xml
@@ -6,13 +6,18 @@
         <version>2.11.8.redhat-1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>scala-partest-javaagent</artifactId>
+    <artifactId>partest-javaagent</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-asm</artifactId>
+            <version>${scala.asm.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang.modules</groupId>
