--- a/src/repl-jline/pom.xml
+++ b/src/repl-jline/pom.xml
@@ -6,12 +6,12 @@
         <version>2.11.8.redhat-1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>scala-repl-jline</artifactId>
+    <artifactId>repl-jline</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
-            <artifactId>scala-repl</artifactId>
+            <artifactId>repl</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
