--- a/src/scaladoc/pom.xml
+++ b/src/scaladoc/pom.xml
@@ -6,7 +6,7 @@
         <version>2.11.8.redhat-1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>scala-scaladoc</artifactId>
+    <artifactId>scaladoc</artifactId>
 
     <dependencies>
         <dependency>
@@ -18,6 +18,11 @@
             <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
             <version>${ant.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-partest_${scala.compat.version}</artifactId>
+            <version>${partest.version}</version>
         </dependency>
 
         <dependency>
@@ -43,12 +48,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.0</version>
+                <version>3.5</version>
                 <configuration>
                     <reportPlugins>
                         <plugin>
                             <artifactId>maven-project-info-reports-plugin</artifactId>
-                            <version>2.2</version>
+                            <version>2.9</version>
                         </plugin>
                         <plugin>
                             <groupId>net.alchim31.maven</groupId>
