WIP: further tweaking to exclude old scala deps leaking in

--- a/src/compiler/pom.xml
+++ b/src/compiler/pom.xml
@@ -18,6 +18,16 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
             <version>${starr.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.scala-lang.modules</groupId>
+                    <artifactId>scala-xml_${scala.compat.version}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.scala-lang.modules</groupId>
+                    <artifactId>scala-parser-combinators_${scala.compat.version}</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
