--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
         <starr.version>2.11.8</starr.version>
         <scala.compat.version>2.11</scala.compat.version>
         <scala.asm.version>5.0.4-scala-3</scala.asm.version>
-        <specs2.version>3.8</specs2.version>
-        <scalatest.version>2.2.6</scalatest.version>
+        <specs2.version>3.8.9</specs2.version>
+        <scalatest.version>3.0.3</scalatest.version>
         <surefire.version>2.20.1</surefire.version>
-        <partest.version>1.0.13</partest.version>
+        <partest.version>1.0.18</partest.version>
         <jline.version>2.12.1</jline.version>
         <ant.version>1.10.1</ant.version>
     </properties>
@@ -67,12 +67,36 @@
                 <artifactId>specs2-core_${scala.compat.version}</artifactId>
                 <version>${specs2.version}</version>
                 <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.scala-lang.modules</groupId>
+                        <artifactId>scala-parser-combinators_${scala.compat.version}</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.scala-lang.modules</groupId>
+                        <artifactId>scala-xml_${scala.compat.version}</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest_${scala.compat.version}</artifactId>
                 <version>${scalatest.version}</version>
                 <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.scala-lang</groupId>
+                        <artifactId>scala-reflect</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.scala-lang.modules</groupId>
+                        <artifactId>scala-parser-combinators_${scala.compat.version}</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.scala-lang.modules</groupId>
+                        <artifactId>scala-xml_${scala.compat.version}</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
         </dependencies>
     </dependencyManagement>
