--- a/src/compiler/pom.xml
+++ b/src/compiler/pom.xml
@@ -71,6 +71,28 @@
     <build>
         <sourceDirectory>scala</sourceDirectory>
         <plugins>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.0.0</version>
+            <executions>
+                <execution>
+                    <id>add-source</id>
+                    <phase>generate-sources</phase>
+                    <goals>
+                        <goal>add-source</goal>
+                    </goals>
+                    <configuration>
+                        <sources>
+                            <source>scala</source>
+                            <source>../interactive/scala</source>
+                            <source>../repl/scala</source>
+                            <source>../repl-jline/scala</source>
+                        </sources>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
